<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".ui.fragments.auth.SignInOtpFragment">

    <!--  Back Button -->
    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/app_name"
        android:src="@drawable/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/skipBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="46dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/skip"
        android:textColor="@color/skip_txt_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_btn" />

    <!--  Heading -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/verify_otp"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/back_btn"
        app:layout_constraintTop_toBottomOf="@+id/back_btn" />

    <!-- 🧾 Description -->
    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/enter_the_one_time_password_otp_sent_to_your_email_or_phone_to_continue"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <!--  OTP Boxes (6) -->
    <EditText
        android:id="@+id/box1"
        style="@style/OtpBoxStyle" />

    <EditText
        android:id="@+id/box2"
        style="@style/OtpBoxStyle" />

    <EditText
        android:id="@+id/box3"
        style="@style/OtpBoxStyle" />

    <EditText
        android:id="@+id/box4"
        style="@style/OtpBoxStyle" />

    <EditText
        android:id="@+id/box5"
        style="@style/OtpBoxStyle" />

    <EditText
        android:id="@+id/box6"
        style="@style/OtpBoxStyle" />


    <!--  Flow Layout for OTP -->
    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/otpFlow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:constraint_referenced_ids="box1,box2,box3,box4,box5,box6"
        app:flow_horizontalGap="4dp"
        app:flow_verticalGap="4dp"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <!--  Verify Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/verify_btn"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/btn_color"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/box6"
        app:layout_constraintStart_toStartOf="@+id/box1"
        app:layout_constraintTop_toBottomOf="@+id/otpFlow" />

    <TextView
        android:id="@+id/send_again_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/don_t_receive_the_email_click_to_send_again"
        android:textColor="@color/txt_color"
        android:textSize="14sp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="@+id/verify_btn"
        app:layout_constraintStart_toStartOf="@+id/verify_btn"
        app:layout_constraintTop_toBottomOf="@+id/verify_btn" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
