<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottom_sheet_jackpot"
    android:background="@drawable/bottom_image">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/spin_wheel_btn"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/spin_the_wheel"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/btn_color"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/close_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="0dp"
        android:layout_height="380dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/animation_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close_btn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_box"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/dismiss"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spin_wheel_btn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/spin_wheel_btn" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView22"
        app:srcCompat="@drawable/spin_icon" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView25"
        app:srcCompat="@drawable/txt_daily_spin" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/spin_now_and_don_t_miss_n_today_s_free_chance_to_win_big"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView26" />


</androidx.constraintlayout.widget.ConstraintLayout>
