<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottom_sheet_dialog"
    android:background="@drawable/bottom_image">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/claim_reward_btn"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/claim_reward"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/btn_color"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView40" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="0dp"
        android:layout_height="380dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/animation_image" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView22"
        app:srcCompat="@drawable/ticket_big" />

    <TextView
        android:id="@+id/badge_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/invite_accepted"
        android:textColor="#FFC400"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView23" />

    <TextView
        android:id="@+id/badge_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/you_ve_signed_up_using_an_invite"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/badge_name"
        app:layout_constraintStart_toStartOf="@+id/badge_name"
        app:layout_constraintTop_toBottomOf="@+id/badge_name" />


    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/reward"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView24"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView22"
        app:layout_constraintTop_toBottomOf="@+id/badge_description" />

    <TextView
        android:id="@+id/tickets_reward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView40"
        app:layout_constraintEnd_toStartOf="@+id/imageView22"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView24"
        app:layout_constraintTop_toTopOf="@+id/textView40" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="18dp"
        android:layout_height="14dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="6dp"
        android:src="@drawable/ticket_ic"
        app:layout_constraintBottom_toBottomOf="@+id/tickets_reward"
        app:layout_constraintEnd_toStartOf="@+id/tickets_reward"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView40"
        app:layout_constraintTop_toTopOf="@+id/tickets_reward" />
</androidx.constraintlayout.widget.ConstraintLayout>
