<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout13"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <!-- 🔙 Back Button -->
    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/app_name"
        android:src="@drawable/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 🔤 Heading -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/join_with_an_invite_code"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/back_btn"
        app:layout_constraintTop_toBottomOf="@+id/back_btn" />

    <!-- 🧾 Description -->
    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/enter_the_invite_code_you_received_to_unlock_access"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <!-- 🔢 OTP Boxes (6) -->
    <EditText
        android:id="@+id/box1"
        style="@style/OtpBoxStyle1" />

    <EditText
        android:id="@+id/box2"
        style="@style/OtpBoxStyle1" />

    <EditText
        android:id="@+id/box3"
        style="@style/OtpBoxStyle1" />

    <EditText
        android:id="@+id/box4"
        style="@style/OtpBoxStyle1" />

    <EditText
        android:id="@+id/box5"
        style="@style/OtpBoxStyle1" />

    <EditText
        android:id="@+id/box6"
        style="@style/OtpBoxStyle1" />

    <!-- 🧩 Flow Layout for OTP -->
    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/otpFlow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:constraint_referenced_ids="box1,box2,box3,box4,box5,box6"
        app:flow_horizontalGap="4dp"
        app:flow_verticalGap="4dp"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <!-- ✅ Verify Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_btn"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/continue_forgot"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/btn_color"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/box6"
        app:layout_constraintStart_toStartOf="@+id/box1"
        app:layout_constraintTop_toBottomOf="@+id/otpFlow" />

    <View
        android:id="@+id/skip_btn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/bg_box"
        app:layout_constraintEnd_toEndOf="@+id/continue_btn"
        app:layout_constraintStart_toStartOf="@+id/continue_btn"
        app:layout_constraintTop_toBottomOf="@+id/continue_btn" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/skip_btn"
        app:layout_constraintEnd_toEndOf="@+id/skip_btn"
        app:layout_constraintStart_toStartOf="@+id/skip_btn"
        app:layout_constraintTop_toTopOf="@+id/skip_btn" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
